Fix dark mode bug on post lists

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -220,7 +220,6 @@ header {
 .postlist-date,
 .postlist-item:before {
 	font-size: 0.8125em; /* 13px /16 */
-	color: var(--color-gray-90);
 }
 .postlist-date {
 	word-spacing: -0.5px;
